comit referente a aula numero 1

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,7 +37,7 @@
           <a href="/profile" id="avatar-profile">
             <p>Jakeliny <span>Ver perfil</span></p>
             <img
-              src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4"
+              src="https:/github.com/chrisMiiranda.png"
             />
           </a>
         </section>
@@ -95,7 +95,7 @@
             <div class="actions column flex">
               <p class="sr-only">Ações</p>
               <a 
-                href="/job-edit" 
+                href="/job/edit" 
                 class="button white edit" 
                 title="Editar Job">
                 <img src="/images/edit-24.svg" alt="Editar Job" />
@@ -126,7 +126,7 @@
             <div class="actions column flex">
               <p class="sr-only">Ações</p>
               <a 
-                href="/job-edit" 
+                href="/job/edit" 
                 class="button white edit" 
                 title="Editar Job">
                 <img src="/images/edit-24.svg" alt="Editar Job" />
