--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -27,12 +27,16 @@
     
   </head>
   <body id="page-job-edit">
-    <%- include('parts/page-header', { title: 'Editar Job'})%>
+    
+    <%- include('parts/page-header', { title: 'Editar Job'}) %>
 
     <div class="container flex animate-up delay-2">
+
+""
         <form id="form-job" 
         method="post"
         action="/job/<%= job.id %>">
+
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
@@ -105,7 +109,7 @@
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br/>
         Ele será apagado para sempre.  
-        </div>p>
+        </p>
         <footer>
           <a 
             class="button gray" 
@@ -118,10 +122,9 @@
       </div>
       <form 
         method="post" 
-        action="/job/delete/{JOBID}" 
+        action="/job/delete/<%= job.id %> " 
         id="delete-job"></form>
     </div>
     <!-- end modal-wrapper -->
   </body>
 </html>
- 
